--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==5.0.1
 bcrypt==4.3.0
 certifi==2025.6.15
 click==8.1.8
@@ -20,6 +21,7 @@ pydantic-settings==2.9.1
 pydantic_core==2.33.2
 PyJWT==2.10.1
 python-dotenv==1.1.0
+redis==6.2.0
 sniffio==1.3.1
 starlette==0.46.2
 StrEnum==0.4.15
