--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ annotated-types==0.7.0
 anyio==4.9.0
 async-timeout==5.0.1
 bcrypt==4.3.0
+black==25.1.0
 certifi==2025.6.15
 click==8.1.8
 dnspython==2.7.0
+ecdsa==0.19.1
 email_validator==2.2.0
 exceptiongroup==1.3.0
 fastapi==0.115.12
@@ -12,20 +14,34 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+mypy_extensions==1.1.0
 nodeenv==1.9.1
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.6.0
 prisma==0.15.0
 pydantic==2.11.7
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
+Pygments==2.19.2
 PyJWT==2.10.1
+pytest==8.4.1
 python-dotenv==1.1.0
+python-http-client==3.3.7
 redis==6.2.0
+ruff==0.12.7
+sendgrid==6.12.4
+six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
 StrEnum==0.4.15
+tomli==2.2.1
 tomlkit==0.13.3
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 uvicorn==0.34.3
+Werkzeug==3.1.3
